group 'com.modulr'
version '1.0'

apply plugin: 'java'

java {
    sourceCompatibility = 17
}

repositories {
    mavenCentral()
}

dependencies {
	implementation 'org.apache.httpcomponents.client5:httpclient5:5.5'
	testImplementation "org.junit.jupiter:junit-jupiter-api:5.13.4"
	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.13.4"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.13.4"
}

test {
	useJUnitPlatform()
}